Fixed cropped images

--- a/src/index.css
+++ b/src/index.css
@@ -26,17 +26,17 @@ footer.disclaimer {
 
 img.Ben {
 	max-width:100%;
-	margin: 0 -400px -125px -400px;
+	margin: 0 0 0 0;
 }
 img.Jojo {
 	max-height:100%;
-	margin: 0 -1300px -75px -1300px;
+	margin: 0 0 0 -140px;
 }
 img.Nick{
 	max-height:100%;
-	margin: 0 -600px -75px -575px;
+	margin: 0 0 0 -140px;
 }
 img.Rachel{
 	max-height:100%;
-	margin: 0 -1305px -75px -1300px;
+	margin: 0 0 0 -145px;
 }
